style.css
/* Global Site Elements */
:root {
	--box-h: 207;
	--box-s: 15%;
	--box-l: 80%;
	--box-dark: calc(var(--box-l) - 15%);
	--box-light: calc(var(--box-l) + 15%);
	--text-color: hsl(var(--box-h), var(--box-s), calc(var(--box-l) - 40%));
	--text-light: hsl(var(--box-h), var(--box-s), calc(var(--box-l) - 25%));
	--box-color: hsl(var(--box-h), var(--box-s), var(--box-l));
	--color-dark: hsl(var(--box-h), var(--box-s), var(--box-dark));
	--color-light: hsl(var(--box-h), var(--box-s), var(--box-light));
	--color-gradient: 125deg, var(--color-light), var(--color-dark);
	
	--hl-strength: calc(var(--box-l) * 1.2);
	--shd-strength: calc(var(--box-l) * (1 - (1.2 - 1)));
	--neu-distance: 7.5px;
	--neu-neg-dist: -7.5px;
	--neu-ramp: 18.75px;
	--highlight: hsl(var(--box-h), var(--box-s), var(--hl-strength));
	--shadow: hsl(var(--box-h), var(--box-s), var(--shd-strength));

	--neu-outer: 
		var(--neu-distance) var(--neu-distance) var(--neu-ramp) var(--shadow),
		var(--neu-neg-dist) var(--neu-neg-dist) var(--neu-ramp) var(--highlight);

	--neu-inner: 
		inset var(--neu-distance) var(--neu-distance) var(--neu-ramp) var(--shadow),
		inset var(--neu-neg-dist) var(--neu-neg-dist) var(--neu-ramp) var(--highlight);

	--edge-dist: 0px;
	--edge-neg-dist: 0px;
	--edge-ramp: 0px;
	--neu-edges: 
    	inset var(--edge-neg-dist) var(--edge-neg-dist) var(--edge-ramp) var(--shadow),
		inset var(--edge-dist) var(--edge-dist) var(--edge-ramp) var(--highlight);

	--radius: 1rem;
	--neu-size: 50%;
	--neu-radius: 1rem;
}

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

html {
	height: 100vh;
	height: calc(var(--vh, 1vh) * 100);
	font-family: 'Inter', sans-serif;
	font-size: 18px;
	font-weight: 400;
	color: var(--text-color);
	overflow-x: hidden;
}

body {
	height: 100%;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	background: var(--box-color);
}

header {
	padding: 1rem;
}

.title {
	display: flex;
	position: relative;
	font-size: 2rem;
}

.better {
	font-family: 'Satisfy', cursive;
	transform: rotate(-35deg);
	position: absolute;
	top: -.75em;
	left: -1.25em;

}

h1 {
	font-weight: 900;
	text-transform: uppercase;
}

main {
	display: grid;
	place-items: center;
}

.container {
	display: flex;
	flex-direction: column;
	justify-content: center;
	min-height: 100%;
	padding: 1rem;
	position: relative;
	z-index: 1;
}

.slider-container {
	padding: 2rem 2rem;
	background: var(--box-color);
	border-radius: var(--neu-radius);
	box-shadow: var(--neu-outer), var(--neu-edges);
	position: relative;
}

.form-group {
	display: grid;
	align-items: center;
	grid-template-columns: 1fr 5fr;
	padding: 0.5rem 0;
}

.color {
	display: flex;
	align-items: center;
	color: var(--text-light);
}

.hsl-input {
	-webkit-appearance: none;
	height: 2rem;
	width: 4rem;
	margin: 0 0.5rem;
	padding: 1rem;
	color: var(--text-light);
	text-align: center;
	border: none;
	border-radius: 1rem;
	background: var(--box-color);
	box-shadow: var(--neu-inner);
}

.hsl-input::placeholder {
	color: var(--text-light);
	text-align: center;
}

.hsl-input::-webkit-outer-spin-button,
.hsl-input::-webkit-inner-spin-button {
	-webkit-appearance: none;
	margin: 0;
}

.slider {
	-webkit-appearance: none;
	appearance: none;
	outline: none;
	height: 2rem;
	border-radius: 1rem;
	background: var(--box-color);
	box-shadow: var(--neu-inner);
	position: relative;
}

.slider::before {
	position: absolute;
	content: "";
	width: 92%;
	height: 5px;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	background: var(--text-color);
	border-radius: 1rem;
	z-index: 1;
}

.slider::-webkit-slider-thumb {
	-webkit-appearance: none;
	appearance: none;
	width: 2rem;
	height: 2rem;
	background: var(--box-color);
	background: linear-gradient(125deg, var(--color-dark), var(--color-light));
	box-shadow: 
		inset 1px 1px 3px var(--highlight),
		inset -1px -1px 3px var(--shadow), 
		3px 3px 5px var(--shadow);
	border-radius: 1rem;
	border: none;
	cursor: pointer;
	position: relative;
	z-index: 2;
}

.slider::-moz-range-thumb {
	width: 2rem;
	height: 2rem;
	background: var(--box-color);
	box-shadow: 
		inset 1px 1px 3px var(--highlight),
		inset -1px -1px 3px var(--shadow), 
		3px 3px 5px var(--shadow);
	border-radius: 1rem;
	border: none;
	cursor: pointer;
	position: relative;
	z-index: 2;
}

.code {
	padding: 1rem;
	width: 50ch;
	color: var(--text-light);
	background: var(--box-color);
	box-shadow: var(--neu-inner);
	border-radius: 1rem;
	position: relative;

}

code p:not(:first-child){
	font-size: 14px;
	margin-left: 1rem;
}

#icon {
  display: none;
}

.tool-tip {
  opacity: 0;
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  color: var(--text-color);
  background: var(--box-color);
  font-weight: bold;
  border-radius: 1rem;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  transition: all .25s ease-in-out;
}

.icon {
	position: absolute;
	right: 2rem;
	top: 2rem;
	width: 30px;
	height: 30px;
	border-radius: 100%;
	display: flex;
	align-items: center;
	justify-content: center;
	box-shadow: 
		-1px -1px 4px var(--highlight),
		1px 1px 4px var(--shadow);
	background: linear-gradient(125deg, var(--color-dark), var(--color-light));
	cursor: pointer;
	user-select: none;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	z-index: 5;
}

.info-container {
	display: none;
	position: absolute;
	top: 0;
	bottom: 0;
	right: 0;
	left: 0;
	padding: 1rem;
	z-index: 4;
}

.show {
	display: block
}

.info {
	z-index: 5;
	background: var(--box-color);
	width: 100%;
	height: 100%;
	border-radius: var(--neu-radius);
	padding: 2rem;
	overflow-y: scroll;
	-ms-overflow-style: none;
	scrollbar-width: none;
}

.info::-webkit-scrollbar {
	display: none;
}

.sub-title, .sig {
	font-family: 'Satisfy', cursive;
}

.info p, ul {
	margin-top: .5rem;
}

ul {
	margin-left: 1rem;
}

.sig {
	font-size: 1.5rem;
}

@media only screen and (max-width: 747px) {
	header {
		padding-bottom: 0;
	}
	.title {
		font-size: 1rem;
		width: 100%;
		margin-top: 2rem;
		align-items: flex-end;
	}

	.slider-container {
		padding: 1rem 1rem;
	}

	.form-group {
		grid-template-columns: 1fr;
	}

	label {
		margin-bottom: 0.25rem;
	}

	.hsl-input {
		margin: 0 4px;
	}

	.code {
		width: 100%;
		margin-top: .5rem;
		box-shadow: var(--neu-outer);
	}

	code {
		display: none;
	}

	.tool-tip{
		opacity: 1 !important;
		background: none;
	}
}

